--- a/index.html
+++ b/index.html
@@ -80,13 +80,9 @@ let noClicks = 0;
 /* 🔥 No button text stages */
 const noTexts = [
     "No 😅",
-    "Are you sure? 😳",
-    "Think again 😬",
-    "Please reconsider 🥺",
-    "This feels wrong 😭",
-    "You're breaking my heart 💔",
-    "Last chance 😢",
-    "Destiny says yes 💘"
+    "Think for a min and pick again 😬",
+    "Pretty pleaseeee 🥺",
+    "I'm on my knees rn 😭"
 ];
 
 /* 🎥 Your gifs (unchanged) */
