--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ yesBtn.addEventListener("click", () => {
                 box-shadow: 0 10px 30px rgba(0,0,0,0.2);
             ">
                 <h1 style="color:#e63946;">YAYAYAYAYYYYY!!! 💕✈️</h1>
-                <img src="https://i.imgur.com/9ZQZ5bB.png" style="max-width:100%; border-radius:15px;" />
+                <img src="https://www.shutterstock.com/image-vector/los-angeles-new-york-usa-260nw-2656179931.jpg" style="max-width:100%; border-radius:15px;" />
                 <p style="font-size:20px; margin-top:20px;">
                     I'm so excited!! TANK U BABBERS<br><br>
                     We're going to New York hehe 🗽✈️<br><br>
