--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@ const noTexts = [
     "No 😅",
     "Think for a min and pick again 😬",
     "Pretty pleaseeee 🥺",
-    "I'm on my knees rn 😭"
+    "I'm on my knees rn 😭",
+    "Are you sure? 🥺",
+    "Just this once plz :(",
+    "PLEASEEEEE 🥺"
 ];
 
 /* 🎥 Your gifs (unchanged) */
@@ -90,7 +93,9 @@ const gifs = [
     "https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExZXFjcHE2cXZ2MzlvaXhyazY2Zjh1MDJrZWFlaDI4aXVldjl4YWthNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/1JmGiBtqTuehfYxuy9/giphy.gif",
     "https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExMXEwcHpiZHJ4cXBud296ZXoybHVjenhibXh3eGRnMDByYzAxbGVlNCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/KwqFBuBC76GEMeXMHu/giphy.gif",
     "https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExbDh4eDF4c2Z3NnVvaWwwNDh4MHZmNHlrYjJld2dnZGpkYXM1aTJrZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ewq2ZiQMWvGffIMRTz/giphy.gif",
-    "https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExNGpocTdrZGI3Z3dxaDFobmljYnBuYzZjNDhlYzlnZG1vcGp1bTNobSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ytu2GUYbvhz7zShGwS/giphy.gif"
+    "https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExNGpocTdrZGI3Z3dxaDFobmljYnBuYzZjNDhlYzlnZG1vcGp1bTNobSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ytu2GUYbvhz7zShGwS/giphy.gif",
+    "https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExcTAwMWc5aW42cmg4Y2dkeWVqZW5zOGJrdmtrc294bGFia2RrZ25raiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/X0QKGRNCxnwWs/giphy.gif",
+    "https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExeGlwZTZ2Z3phNjU0MGhmZm11MGtqOTQ2Ym9raGN3OGN2NWI4MTRzNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/P53TSsopKicrm/giphy.gif"
 ];
 
 const yesBtn = document.getElementById("yesBtn");
