--- a/index.html
+++ b/index.html
@@ -61,11 +61,24 @@
         max-width: 250px;
         border-radius: 10px;
     }
+
+    /* Optional: intro gif size */
+    .intro-gif {
+        max-width: 300px;
+        margin-bottom: 20px;
+        border-radius: 10px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 </style>
 </head>
 <body>
 
 <div class="card" id="mainCard">
+    <!-- Intro GIF -->
+    <img src="YOUR_INTRO_GIF_URL_HERE" class="intro-gif" />
+
     <h1>Will you be my Valentines Babbers? 💖</h1>
 
     <div class="buttons">
